add test and begin auth function